# vsql-rust-sdk

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  package.sh
.github/workflows/: ci.yml  cla.yml
cargo-vsql/: Cargo.toml  README.md
cargo-vsql/src/: main.rs
examples/rational/: Cargo.toml  manifest.json
examples/rational/mysql-test/t/: rational.result  rational.test
examples/rot13/: Cargo.toml  manifest.json
examples/rot13/mysql-test/r/: rot13.result
examples/rot13/mysql-test/t/: rot13.test
examples/rot13/src/: lib.rs
examples/vsql_keyring/: Cargo.toml  manifest.json
examples/vsql_keyring/mysql-test/r/: vsql_keyring.result
examples/vsql_keyring/mysql-test/t/: vsql_keyring.test
examples/vsql_keyring/src/: lib.rs
examples/vsql_ping/: Cargo.toml  manifest.json
examples/vsql_ping/mysql-test/r/: vsql_ping.result
examples/vsql_ping/mysql-test/t/: vsql_ping.test
examples/vsql_ping/src/: lib.rs
examples/vsql_rational/: Cargo.toml  manifest.json
examples/vsql_rational/mysql-test/t/: vsql_rational.result  vsql_rational.test
examples/vsql_rational/src/: lib.rs
examples/vsql_rot13/: Cargo.toml  manifest.json
examples/vsql_rot13/mysql-test/r/: vsql_rot13.result
examples/vsql_rot13/mysql-test/t/: vsql_rot13.test
examples/vsql_rot13/src/: lib.rs
examples/vsql_status_var/: Cargo.toml  manifest.json
examples/vsql_status_var/mysql-test/: suite.opt
examples/vsql_status_var/mysql-test/r/: vsql_status_var.result
examples/vsql_status_var/mysql-test/t/: vsql_status_var.test
examples/vsql_status_var/src/: lib.rs
examples/vsql_sys_var/: Cargo.toml  manifest.json
examples/vsql_sys_var/mysql-test/r/: vsql_sys_var.result
examples/vsql_sys_var/mysql-test/t/: vsql_sys_var.test
examples/vsql_sys_var/src/: lib.rs
examples/vsql_thread_worker/: Cargo.toml  manifest.json
examples/vsql_thread_worker/mysql-test/r/: vsql_thread_worker.result
examples/vsql_thread_worker/mysql-test/t/: vsql_thread_worker.test
examples/vsql_thread_worker/src/: lib.rs
include/villagesql/abi/: types.h
include/villagesql/abi/preview/: keyring.h  ping.h  status_var.h  sys_var.h  thread_worker.h
tests/sdk_coverage/: Cargo.toml  manifest.json
tests/sdk_coverage/mysql-test/t/: sdk_coverage.result  sdk_coverage.test
tests/sdk_coverage/src/: lib.rs
villagesql/: Cargo.toml  README.md
villagesql-sys/: Cargo.toml  build.rs
villagesql-sys/src/: bindings.rs  lib.rs
villagesql-sys/src/bindings/: ping.rs  sys_var.rs
villagesql-sys/src/bindings/preview/: keyring.rs  status_var.rs  thread_worker.rs
villagesql/src/: lib.rs
villagesql/src/preview/: keyring.rs  mod.rs  ping.rs  status_var.rs  sys_var.rs  thread_worker.rs
vsql/: Cargo.toml  README.md
vsql-sys/: Cargo.toml  README.md  build.rs
vsql-sys/src/: bindings.rs
vsql/src/: lib.rs
