[workspace]
members = [
    "villagesql-sys",
    "villagesql",
    "cargo-vsql",
    "examples/vsql_rot13",
    "examples/vsql_rational",
    "examples/vsql_ping",
    "examples/vsql_keyring",
    "tests/sdk_coverage",
]
default-members = [
    "villagesql-sys",
    "villagesql",
    "cargo-vsql",
    "examples/vsql_rot13",
    "examples/vsql_rational",
    "examples/vsql_ping",
    "examples/vsql_keyring",
    "tests/sdk_coverage",
]
resolver = "2"
