[workspace]
members = [
    "villagesql-sys",
    "villagesql",
    "cargo-vsql",
    "examples/vsql_rot13",
    "examples/vsql_rational",
    "examples/vsql_ping",
    "examples/vsql_sys_var",
    "tests/sdk_coverage",
    "examples/vsql_thread_worker",
]
default-members = [
    "villagesql-sys",
    "villagesql",
    "cargo-vsql",
    "examples/vsql_rot13",
    "examples/vsql_rational",
    "examples/vsql_ping",
    "examples/vsql_sys_var",
    "tests/sdk_coverage",
]
resolver = "2"
