[package]
name = "cargo-vsql"
version = "0.0.2"
edition = "2021"
description = "Cargo subcommand for building, packaging, and testing VillageSQL extensions"
license = "GPL-2.0-only"
repository = "https://github.com/villagesql/vsql-rust-sdk"
homepage = "https://github.com/villagesql/vsql-rust-sdk"
readme = "README.md"
keywords = ["sql", "database", "extension", "cargo", "villagesql"]
categories = ["database", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-vsql"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tar = "0.4"
toml = "0.8"
