[package]
name = "villagesql"
version = "0.0.1"
edition = "2021"
description = "Safe Rust SDK for building VillageSQL extension functions (VDFs)"
license = "GPL-2.0-only"
repository = "https://github.com/villagesql/vsql-rust-sdk"
homepage = "https://github.com/villagesql/vsql-rust-sdk"
readme = "README.md"
keywords = ["sql", "database", "extension", "ffi", "villagesql"]
categories = ["database", "api-bindings"]

[dependencies]
villagesql-sys = { path = "../villagesql-sys", version = "0.0.1" }
paste = "1"
